# libtorch-cross-QNX-test

./: CMakeLists.txt
cmake/: qnx_7.0.0_linux_x86_64.cmake
